# simpleGtkAnimation

./: .envrc  .gitignore  README.md  flake.nix  simple-window.cabal
src/: main.hs
src/MyApplicaton/: Animations.hs  App.hs  Utils.hs
src/styles/: tests.css  tests.css.map  tests.sass
tests/: Customs.hs  Tests.hs
