name:                simple-window
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library simple-window-others
  exposed-modules:      MyApplicaton.Utils MyApplicaton.Animations MyApplicaton.App
  hs-source-dirs:       src
  build-depends:        base >=4.11
                      , gi-gtk
                      , haskell-gi-base
                      , text
                      , gi-gdk
                      , bytestring
                      , binary

test-suite simple-tests
   hs-source-dirs:      tests
   other-modules:       Customs MyApplicaton.Utils
   main-is:             Tests.hs
   type:                exitcode-stdio-1.0
   build-depends:       base,
                        tasty,
                        tasty-hunit,
                        tasty-quickcheck,
                        HUnit,
                        smallcheck,
                        simple-window-others

executable simple-window
  hs-source-dirs:       src
  other-modules:        MyApplicaton.Utils MyApplicaton.Animations MyApplicaton.App
  main-is:              main.hs
  build-depends:        base >=4.11
                      , gi-gtk
                      , haskell-gi-base
                      , text
                      , gi-gdk
                      , bytestring
                      , binary
                      , simple-window-others
  default-language:     Haskell2010

